--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx ./src/main.ts",
+    "dev": "tsc --noEmit && tsx ./src/main.ts",
     "db:start-mongo": "docker run --name mongodb-container -d -p 27017:27017 -v mongo-data:/data/db -e MONGO_INITDB_ROOT_USERNAME=myuser -e MONGO_INITDB_ROOT_PASSWORD=mypass mongo:latest",
     "db:sync": "prisma db push --skip-generate",
     "generate:prisma": "npx prisma generate",
@@ -23,16 +23,19 @@
     "@prisma/client": "^5.20.0",
     "@prisma/extension-accelerate": "^1.2.0",
     "@types/express": "^5.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^5.0.0",
     "express-oauth2-jwt-bearer": "^1.6.0",
     "graphql": "^16.9.0",
     "graphql-yoga": "^5.7.0",
+    "helmet": "^8.0.0",
     "prisma": "^5.20.0",
     "typescript": "^5.6.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "tsx": "^4.19.1"
   }
 }
