--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsc --noEmit && tsx ./src/main.ts",
+    "debug": "tsc --noEmit && tsx --inspect ./src/main.ts",
     "db:start-mongo": "docker run --name mongodb-container -d -p 27017:27017 -v mongo-data:/data/db -e MONGO_INITDB_ROOT_USERNAME=myuser -e MONGO_INITDB_ROOT_PASSWORD=mypass mongo:latest",
     "db:sync": "prisma db push --skip-generate",
     "generate:prisma": "npx prisma generate",
@@ -20,8 +21,6 @@
     "@graphql-tools/graphql-file-loader": "^8.0.1",
     "@graphql-tools/load": "^8.0.2",
     "@graphql-tools/schema": "^10.0.6",
-    "@prisma/client": "^5.20.0",
-    "@prisma/extension-accelerate": "^1.2.0",
     "@types/express": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -30,12 +29,16 @@
     "graphql": "^16.9.0",
     "graphql-yoga": "^5.7.0",
     "helmet": "^8.0.0",
-    "prisma": "^5.20.0",
+    "lodash": "^4.17.21",
+    "luxon": "^3.5.0",
+    "mongodb": "^6.9.0",
     "typescript": "^5.6.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
+    "@types/lodash": "^4.17.10",
+    "@types/luxon": "^3.4.2",
     "tsx": "^4.19.1"
   }
 }
